Add missing viewport for proper mobile display

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>Polymer Drive Viewer</title>
     <script src="bower_components/platform/platform.js"></script>
     <link rel="import" href="elements/drive-viewer.html">
