Update to 1.0 WIP

--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>Polymer Drive Viewer</title>
-    <script src="bower_components/platform/platform.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="elements/drive-viewer.html">
-    <style>
-      * { box-sizing: border-box; }
-      html, body { width: 100%; height: 100% }
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
   </head>
   <body>
-    <drive-viewer clientId="YOUR_CLIENT_ID"></drive-viewer>
+    <drive-viewer client-id="446132887758-euehm1f4g06mvsmea5jd1nsaolvhv9ee.apps.googleusercontent.com"></drive-viewer>
   </body>
 </html>
